Remove placeholder project images, add themed icons, fix sidebar spacing

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -156,6 +156,8 @@
   cursor: pointer;
 
   li:last-child {
+    margin-bottom: 0;
+
     a {
       margin-bottom: 0;
     }
@@ -192,7 +194,7 @@
   @include breakpoint($large) {
     display: block;
     position: relative;
-    margin: 0;
+    margin: 10px 0 0 0;
     padding: 0;
     border: 0;
     background: transparent;
@@ -235,6 +237,8 @@
 
   li {
     white-space: nowrap;
+    margin-bottom: 10px;
+    line-height: 1.4;
   }
 
   a {
